[package]
name = "clash_exchange_program"
version = "0.1.0"
authors = ["Carlos Silva<carlos_silva071@hotmail.com>"]
edition = "2021"

[dependencies]
solana-program = "1.8.6"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
borsh = "0.9.1"
thiserror = "1.0.30"

[dev-dependencies]
solana-sdk = "1.8.1"

[lib]
crate-type = ["cdylib", "lib"]